# bulk

./: .deploy.sh  CMakeLists.txt  README.md
lib/: CMakeLists.txt  bulk.hpp  iface.hpp
pkg/: CMakeLists.txt
src/: CMakeLists.txt  bulk.cpp
tst/: CMakeLists.txt  test_bulk.cpp
